Fix jlink cyclic dependency